--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -102,7 +102,11 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="./register/delegate_register.html">Delegate Application</a>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="./register/ip_register.html"
@@ -150,10 +154,9 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations General Assembly</h3>
                   <p class="card-text">
-                    The First Committee deals with disarmament, global
-                    challenges and threats to peace that affect the
-                    international community and seeks out solutions to the
-                    challenges in the international security regime.
+                    Discussion on the propagation of peace and security in the
+                    Middle East with special emphasis on the viability of the
+                    JCPOA
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -173,7 +176,7 @@
             <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg rounded">
                 <img
-                  class="d-block img-fluid p-4 pb-5"
+                  class="d-block img-fluid p-4"
                   style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/wha.png"
                   alt=""
@@ -181,9 +184,8 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>World Health Assembly</h3>
                   <p class="card-text">
-                    The World Health Assembly (WHA) is the forum through which
-                    the World Health Organization (WHO) is governed by its 194
-                    member states.
+                    Updating WHO’s 2013-2020 Mental Health Action Plan in light
+                    of the challenges brought by COVID-19
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -211,8 +213,8 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>Counter Terrorism Committee</h3>
                   <p class="card-text">
-                    The Counter-Terrorism Committee is a subsidiary body of the
-                    United Nations Security Council.
+                    Discussion on the use of internet as a medium of terrorism
+                    and proliferation activities
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -241,9 +243,8 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations Human Right Council</h3>
                   <p class="card-text">
-                    Despite living in an era of progress, human rights
-                    violations are increasingly prevalent in the current
-                    discourse.
+                    Discussion on police brutality and human rights violation
+                    during people's protests
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
