--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,6 @@
     <title>AMIMUN '21 | Contact</title>
   </head>
   <body class="example">
-
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
@@ -91,14 +90,18 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply 
+                Apply
               </a>
               <ul
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="./register/delegate_register.html">Delegate Application</a>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="./register/ip_register.html"
@@ -141,9 +144,7 @@
       <!-- Second Row [Team]-->
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
-          <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
-          >
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -155,39 +156,14 @@
                 <div class="p-4">
                   <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
                   <p class="small text-muted">Phone: +91 7085490761</p>
-                  <p class="small text-muted">
-                    Email: meshuwa.mawthoh@student.amity.edu
-                  </p>
-                  <!-- <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul> -->
+                  <p class="small text-muted">Email: sgamimun@gmail.com</p>
+                  <p class="small text-muted">Post: Secretary-General</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
-          >
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -200,8 +176,9 @@
                   <h5 class="mb-0">Simran Malhotra</h5>
                   <p class="small text-muted">Phone: +91 9999090695</p>
                   <p class="small text-muted">
-                    Email: simran.malhotra3@student.amity.edu
+                    Email: chargedaffairsamimun@gmail.com
                   </p>
+                  <p class="small text-muted">Post: Charge D'Affairs</p>
                   <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -229,9 +206,7 @@
             </div>
           </div>
 
-          <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
-          >
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -243,9 +218,8 @@
                 <div class="p-4">
                   <h5 class="mb-0">Rohan Nagpal</h5>
                   <p class="small text-muted">Phone: +91 9599441919</p>
-                  <p class="small text-muted">
-                    Email: rohan.nagpal@s.amity.edu
-                  </p>
+                  <p class="small text-muted">Email: dgamimun@gmail.com</p>
+                  <p class="small text-muted">Post: Director General</p>
                   <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -273,9 +247,7 @@
             </div>
           </div>
 
-          <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-5"
-          >
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -287,9 +259,8 @@
                 <div class="p-4">
                   <h5 class="mb-0">Shubhangi Thakur</h5>
                   <p class="small text-muted">Phone: +91 8700659269</p>
-                  <p class="small text-muted">
-                    Email: shubhangi.thakur1@student.amity.edu
-                  </p>
+                  <p class="small text-muted">Email: amimuninfo@gmail.com</p>
+                  <p class="small text-muted">Post: USG Delegate Affairs</p>
                   <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
