--- a/delegates/aippm.html
+++ b/delegates/aippm.html
@@ -132,10 +132,7 @@
             The All India Political Parties Meet
           </h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over two days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations.
+            <h4>Agenda: </h4>Discussion on amendments to farm laws in view of the ongoing Nationwide Farmer protest
           </p>
         </div>
       </div>
