--- a/delegates/hrc.html
+++ b/delegates/hrc.html
@@ -132,10 +132,7 @@
             United Nations Human Rights Council
           </h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over two days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations.
+           <h4>Agenda: </h4>Discussion on police brutality and human rights violation during people's protests
           </p>
         </div>
       </div>
