--- a/delegates/wha.html
+++ b/delegates/wha.html
@@ -130,10 +130,7 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">World Health Assembly</h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over two days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations.
+           <h4>Agenda: </h4>Updating WHO’s 2013-2020 Mental Health Action Plan in light of the challenges brought by COVID-19
           </p>
         </div>
       </div>
