--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-               Our Team
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
@@ -102,12 +102,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -167,7 +167,10 @@
                 </h1>
                 <p></p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="./register/delegate_register.html" role="button"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    href="./register/delegate_register.html"
+                    role="button"
                     >Apply</a
                   >
                 </p>
@@ -326,9 +329,9 @@
         <hr class="featurette-divider mt-5" />
 
         <!-- START THE FEATURETTES -->
-        <div class="container marketing mt-5">
-          <!-- START THE FEATURETTES -->
-          <!-- <div
+        <!-- <div class="container marketing mt-5"> -->
+        <!-- START THE FEATURETTES -->
+        <!-- <div
             class="p-5 m-5 my-5 mx-auto text-grey rounded"
             style="background-color: #f5a98c"
           >
@@ -338,10 +341,9 @@
               </h1>
             </div>
           </div>
-          <hr class="featurette-divider mt-5" />
-          <div class="row featurette"> -->
-
-          <!-- <div class="col-md-7">
+          <hr class="featurette-divider mt-5" /> -->
+        <!-- <div class="row featurette">
+            <div class="col-md-7">
               <h2 class="featurette-heading">
                 Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
@@ -354,12 +356,11 @@
             </div>
             <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/ashok.jpg" alt="" />
-            </div> -->
-        </div>
+            </div>
+          </div>
+          <hr class="featurette-divider" /> -->
 
-        <!-- <hr class="featurette-divider" />
-
-          <div class="row featurette">
+        <!-- <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
                 Dr. Atul
@@ -389,13 +390,65 @@
                 <span class="text-muted">Shukla</span>
               </h2>
               <h5>Vice Chancellor, AUUP and Patron</h5>
-              <p class="lead" style="text-align: justify">Coming Soon..</p>
+              <p class="lead" style="text-align: justify">
+                I am pleased to share that Amity University Uttar Pradesh is
+                organising first online edition of Amity International Model
+                United Nations Conference (AMIMUN) on the theme ‘Winds of
+                Change: Navigating through A New Normal in the Multipolar
+                World”, from March 20 - 21, 2021. The current worldwide scenario
+                due to COVID-19 pandemic has caused huge reforms in the policies
+                and procedures of organisations globally. Amity has also brough
+                tremendous shift in the functioning of the university and taken
+                several initiatives with the support of latest technology to
+                ensure uninterrupted services to all stakeholders, continued
+                learning, education, research, etc., AMIMUN’21 is one of such
+                initiatives which is being organised virtually to energize
+                connection among students from across the globe and give them
+                the chance to partake in conciliatory conversations on
+                convincing issues. <span id="dots">...</span
+                ><span id="more">
+                  A Model United Nations is a scholarly simulation of the
+                  different procedures of the United Nations, with understudies
+                  addressing different nations. Not only has the fame of MUNs
+                  taken off, it has also settled as a unique stage where the
+                  promising delegates come together and learn myriad skills.
+                  AMIMUN has helped members from across the world to observe the
+                  extraordinary relevance of learning foreign relations and
+                  understanding the working and meaning of the United Nations.
+                  Constructing harmonious relations, security, social
+                  advancement, better expectations of the world and common
+                  liberties, are various viewpoints that are underscored by the
+                  young minds at AMIMUN. The theme for AMIMUN'21 “Winds of
+                  Change: Navigating through A New Normal in the Multipolar
+                  World”, has been meticulously chosen to make sure that the
+                  young assume the responsibility to rise from the myriad of
+                  issues and find a solution. AMIMUN’21 aim to present a
+                  worldwide viewpoint through a space that will mix countries to
+                  meet and make a reality where we discover development and
+                  tranquility in concurrence. This virtual MUN will be a
+                  one-of-a-kind experience, with varied participants from
+                  universities from all around the world, especially when the
+                  physical borders are replaced by connections of internet and
+                  accessibility. I take this opportunity to convey my best
+                  wishes to the delegates and wish them a great learning
+                  experience. I am certain that the hard work and commitment of
+                  the organizing committee members and the Secretariat will make
+                  AMIMUN’21 a splendid success! Best Wishes,</span
+                >
+              </p>
+              <button
+                class="btn-outline-secondary btn"
+                onclick="myFunction()"
+                id="myBtn"
+              >
+                Read more
+              </button>
             </div>
             <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/bal.jpg" alt="" />
             </div>
-          </div>
-          <hr class="featurette-divider" />
+          </div> -->
+        <!-- <hr class="featurette-divider" />
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
@@ -408,9 +461,8 @@
             <div class="col-md-5 order-md-1">
               <img class="d-block img-fluid" src="./static/0921_P.png" alt="" />
             </div>
-          </div> -->
-
-        <!-- <hr class="featurette-divider" />
+          </div>
+          <hr class="featurette-divider" />
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
@@ -424,14 +476,14 @@
               <img class="d-block img-fluid" src="./static/nat.jpg" alt="" />
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <hr class="featurette-divider" /> -->
+        <hr class="featurette-divider" />
         <!-- /END THE FEATURETTES -->
 
         <!-- Three columns of text below the carousel -->
         <div
-          class="p-5 m-5 my-5 mx-auto text-grey rounded"
+          class="p-5 m-5 my-5 m-auto text-grey rounded"
           style="background-color: #f5a98c"
         >
           <div class="px-0">
@@ -439,9 +491,13 @@
           </div>
         </div>
         <div class="row text-center m-5">
-          <h3>Announcing soon..</h3>
-          <div class="col-lg-4">
-            <!-- <img class="d-block img-fluid" src="./static/sp-1.png" alt="" /> -->
+          <!-- <h3>Announcing soon..</h3> -->
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/Doctors Without Borders.png"
+              alt=""
+            />
 
             <!-- <h2>Heading</h2>
             <p>
@@ -457,8 +513,12 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <!-- <img class="d-block img-fluid" src="./static/sp-2.png" alt="" /> -->
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/partnership_office_new_delhi_black_page-0001.jpg"
+              alt=""
+            />
 
             <!-- <h2>Heading</h2>
             <p>
@@ -474,8 +534,12 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <!-- <img class="d-block img-fluid" src="./static/sp-3.png" alt="" /> -->
+          <div class="col-lg-5 col-md-5 mb-4 mb-lg-5">
+            <img
+              class="d-block m-auto img-fluid"
+              src="./static/India_logo.png"
+              alt=""
+            />
 
             <!-- <h2>Heading</h2>
             <p>
@@ -493,6 +557,171 @@
           <!-- /.col-lg-4 -->
         </div>
         <!-- /.row -->
+
+        <hr class="featurette-divider mt-5" />
+        <div
+          class="p-5 m-5 mx-auto text-grey rounded"
+          style="background-color: #f5a98c"
+        >
+          <div class="px-0">
+            <h1 class="display-4 font-italic">Contact Us</h1>
+            <p class="lead my-3">
+              We encourage you to stay in touch with us on social media! It is
+              the best way to keep track of conference updates, position
+              applications, and more. When you register, the team will
+              automatically be in touch with you.
+            </p>
+          </div>
+        </div>
+
+        <!-- Second Row [Team]-->
+        <section class="container rounded" style="background: #fff">
+          <div class="row p-5 mb-4">
+            <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+              <!-- Card-->
+              <div class="card shadow-lg border-0 rounded">
+                <div class="card-body p-0">
+                  <!-- <img
+                  src="./static/mesh-contact.jpeg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                  <div class="p-4">
+                    <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
+                    <p class="small text-muted">Phone: +91 7085490761</p>
+                    <p class="small text-muted">Email: sgamimun@gmail.com</p>
+                    <p class="small text-muted">Post: Secretary-General</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+              <!-- Card-->
+              <div class="card shadow-lg border-0 rounded">
+                <div class="card-body p-0">
+                  <!-- <img
+                  src="./static/Simran Malhotra.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                  <div class="p-4">
+                    <h5 class="mb-0">Simran Malhotra</h5>
+                    <p class="small text-muted">Phone: +91 9999090695</p>
+                    <p class="small text-muted">
+                      Email: chargedaffairsamimun@gmail.com
+                    </p>
+                    <p class="small text-muted">Post: Charge D'Affairs</p>
+                    <!-- <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+              <!-- Card-->
+              <div class="card shadow-lg border-0 rounded">
+                <div class="card-body p-0">
+                  <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                  <div class="p-4">
+                    <h5 class="mb-0">Rohan Nagpal</h5>
+                    <p class="small text-muted">Phone: +91 9599441919</p>
+                    <p class="small text-muted">Email: dgamimun@gmail.com</p>
+                    <p class="small text-muted">Post: Director General</p>
+                    <!-- <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+              <!-- Card-->
+              <div class="card shadow-lg border-0 rounded">
+                <div class="card-body p-0">
+                  <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                  <div class="p-4">
+                    <h5 class="mb-0">Shubhangi Thakur</h5>
+                    <p class="small text-muted">Phone: +91 8700659269</p>
+                    <p class="small text-muted">Email: amimuninfo@gmail.com</p>
+                    <p class="small text-muted">Post: USG Delegate Affairs</p>
+                    <!-- <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
 
       <!-- FOOTER -->
@@ -527,6 +756,23 @@
         </p>
       </footer>
     </main>
+    <script>
+      function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+      }
+    </script>
     <script src="app.js"></script>
     <!-- <div class="container"></div> -->
 
