--- a/messages/sec.html
+++ b/messages/sec.html
@@ -102,7 +102,11 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
+                  <a
+                    class="dropdown-item"
+                    href="../register/delegate_register.html"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="../register/ip_register.html"
@@ -132,167 +136,304 @@
         style="background-color: #f5a98c"
       >
         <div class="px-0">
-          <h1 class="display-4 font-italic">Secretariat</h1>
+          <h1 class="display-4 font-italic">Senior Secretariat</h1>
         </div>
       </div>
       <!-- Second Row [Team]-->
       <section class="container rounded" style="background: #fff">
-        <div class="row p-5 mb-4">
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-            <h3>Announcing Soon..</h3>
+        <div class="row p-5 mb-4 d-flex justify-content-center">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
-            <!-- <div class="card shadow-lg border-0 rounded">
+            <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
+                <!-- <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
-                  <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
+                  <h5 class="mb-0">Meshuwa Mawthoh</h5>
+                  <p class="small text-muted">Secretary General</p>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
-            <!-- <div class="card shadow-lg border-0 rounded">
+            <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
-                  <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
+                  <h5 class="mb-0">Rohan Nagpal</h5>
+                  <p class="small text-muted">Director General</p>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
-            <!-- <div class="card shadow-lg border-0 rounded">
+            <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
-                  <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
+                  <h5 class="mb-0">Simran Malhotra</h5>
+                  <p class="small text-muted">Charge D'Affairs</p>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
             <!-- Card-->
-            <!-- <div class="card shadow-lg border-0 rounded">
+            <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
-                  <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
+                  <h5 class="mb-0">Hiba Mukhtar Dedmari</h5>
+                  <p class="small text-muted">Chef De Cabinet</p>
                 </div>
               </div>
-            </div>-->
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div
+        class="p-5 m-5 mx-auto text-grey rounded"
+        style="background-color: #f5a98c"
+      >
+        <div class="px-0">
+          <h1 class="display-4 font-italic">Secretariat</h1>
+        </div>
+      </div>
+      <section class="container rounded" style="background: #fff">
+        <div class="row p-5 mb-4">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Shubhangi Thakur</h5>
+                  <p class="small text-muted">USG Delegate Affairs</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Sadhaya Rudrani</h5>
+                  <p class="small text-muted">Deputy USG Delegate Affairs</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Isha Khurana</h5>
+                  <p class="small text-muted">
+                    USG Creative Content Management
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Sukriti Chandok</h5>
+                  <p class="small text-muted">
+                    Deputy USG Creative Content Management
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Hrithik Raj</h5>
+                  <p class="small text-muted">USG Web Operations</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-5"
+          >
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Nipunika Sahgal</h5>
+                  <p class="small text-muted">USG International Press</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-5"
+          >
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Rhythm Chakraborty</h5>
+                  <p class="small text-muted">Deputy USG International Press</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Zeeshan Farhed</h5>
+                  <p class="small text-muted">UDG Marketing & Promotions</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Zeba Hussain</h5>
+                  <p class="small text-muted">
+                    Deputy UDG Marketing & Promotions
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Maninderjeet Singh</h5>
+                  <p class="small text-muted">UDG Design</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Ankush Singha</h5>
+                  <p class="small text-muted">Deputy UDG Design</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <!-- <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                /> -->
+                <div class="p-4">
+                  <h5 class="mb-0">Vipul Singla</h5>
+                  <p class="small text-muted">UDG Finance</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
