--- a/delegates/ga.html
+++ b/delegates/ga.html
@@ -130,10 +130,7 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">United Nations General Assembly</h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over two days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations.
+             <h4>Agenda: </h4>Discussion on the propagation of peace and security in the Middle East with special emphasis on the viability of the JCPOA
           </p>
         </div>
       </div>
