--- a/delegates/ip.html
+++ b/delegates/ip.html
@@ -130,7 +130,7 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">International Press</h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
+            <h4>Agenda: </h4> Amity International Model United Nations is a simulation of the
             United Nations spanning over two days. At AMIMUN, delegates gain
             in-depth knowledge of diplomacy, international relations, and the
             inner workings of the United Nations.
